wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Love+Ya+Like+A+Sister&family=Montserrat:wght@300&display=swap');

#content{
    max-width: 1600px;
    margin: 0 auto;
}
body{
    background-color:white;
    font-family: Montserrat, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 22px;
    margin: 0;
    padding: 0;
}
.home-title{
    font-size: 2em;
    margin-top: 10px;
}
h1,h2,h3,h4{
    font-family: 'Love Ya Like A Sister', 'Bradley Hand', serif;
}
h2{
    margin: 0;
}
header{
    background-color:#1A775F;
    display: grid;
    grid-template-columns: 150px auto;
}
.logo{
    width: 80px;
}
#logo_link{
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}
nav{
    display: flex;
    justify-content: space-around;
}
nav a{
    text-align: center;
    color:#EFF2F2;
    text-decoration: none;
    padding: 35px;
    
}
nav a:hover{
    background-color:#709183;
    color: #EFF2F2;
}
#hero{
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    
}
#hero-box{
    grid-column: 1/4;
    grid-row:1/3;
    z-index: -1;
}
#hero-img{
    width: 100%;
}
#hero-msg{
    grid-column: 2/3;
    grid-row: 1/2;
    margin-top: 100px;
}
#hero-msg h1{
    text-align: center;
    color: #539DCA;

}
#hero-msg h4{
    text-align: center;
    color: #539DCA;
}
.button-box{
    text-align: center;
}
.icon{
    width: 80px;
}
.book, .join{
    background-color:#539DCA;
    color:#EFF2F2;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}
.book:hover, .join:hover{
    background-color:#85B5C8;
    color:#EFF2F2;
}
main{
    text-align: center;
}
main section img{
    box-sizing: border-box;
}
.home-grid{
    display: grid;
    grid-template-columns: repeat(10, 1fr);
}
.rivers-card{
    margin: 200px 0;
    grid-column: 2/4;
    grid-row: 2/3;
}
.camping-card{
    margin: 200px 0;
    grid-column: 5/7;
    grid-row: 2/3;
}
.rapids-card{
    margin: 200px 0;
    grid-column: 8/10;
    grid-row: 2/3;
}
.card-img{
    border: 10px solid #1A775F;
    width: 100%;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
}
.card-img:hover {
    opacity: .6;
    transform: scale(1.1);
}
.icon{
    padding-top: 10px;
}
.mountains{
    width: 100%;
    grid-column: 2/7;
    grid-row: 5/8;
    box-shadow: 5px 5px 10px #6f7364;
}
.msg{
    background-color:#1A775F ;
    color:#EFF2F2;
    line-height: 1.5em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 6/7;
    box-shadow: 5px 5px 10px #6f7364;
}
.msg p{
    font-size: .7em;
    padding-bottom: 15px;
}
#background{
    height: 725px;
    background-color: #709183;
    grid-column: 1/11;
    grid-row: 4/10;
}

/* page 2, rivers */

#river-grid{
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    gap: 50px;
}
.raft64{
    width: 100%;
    grid-column: 2/8;
    grid-row: 5/10;
    box-shadow: 5px 5px 10px #6f7364;
    z-index: 2;
    justify-self: left;
}
.salmon-msg{
    background-color:#3E6CCA;
    color:#EFF2F2;
    line-height: 1em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 6/9;
    box-shadow: 5px 5px 10px #6f7364;
    z-index: 3;
    justify-self: right;
}
.h1-2{
    grid-column: 5/8;
    
}
.salmon-msg p, .desolation-msg p, .grand-msg p{
    font-size: .5em;
    padding-bottom: 7px;
}

#background2-1{
    height: 725px;
    background-color: #85B5C8;
    grid-column: 1/11;
    grid-row: 4/11;
}
.raft12{
    width: 100%;
    grid-column: 4/10;
    grid-row: 12/17;
    box-shadow: -5px 5px 10px #6f7364;
    z-index: 2;
    justify-self: left;
}
.desolation-msg{
    background-color:#1A775F;
    color:#EFF2F2;
    line-height: 1em;
    padding: 35px;
    grid-column: 2/6;
    grid-row: 13/15;
    box-shadow: -5px 5px 10px #6f7364;
    z-index: 3;
}
#background2-2{
    height: 725px;
    background-color: #809D91;
    grid-column: 1/11;
    grid-row: 11/18;
}
.raft11{
    width: 100%;
    grid-column: 2/7;
    grid-row: 20/27;
    box-shadow: 5px 5px 10px #6f7364;
    z-index: 2;
    justify-self: left;
}
.grand-msg{
    background-color:#3E6CCA;
    color:#EFF2F2;
    line-height: 1em;
    padding: 35px;
    grid-column: 6/10;
    grid-row: 22/24;
    box-shadow: 5px 5px 10px #6f7364;
    z-index: 3;
    justify-self: right;
}
#background2-3{
    height: 725px;
    background-color: #85B5C8;
    grid-column: 1/11;
    grid-row: 19/28;
}
footer{
    background-color: #1A775F;
    color:#EFF2F2;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}
footer a{
    color:#EFF2F2;
    text-decoration: none;
}
footer a:hover{
    color:#EFF2F2;
}
footer p{
    font-size: 1.2em;
}
footer p a:hover{
    text-decoration: underline;
}
footer .social img{
    padding-top: 15px;
}

/* contact us page */

h2{
    margin: 50px auto;
}
#feedback {
    background-color: #85B5C8;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    padding: .5em;
    /* make this element invisible until we are ready for it */
    display: none;      
}
.moveDown {
    margin-top: 3em;
}
form {
    /* Center the form on the page */
    margin: 200px auto;
    width: 400px;
    /* Form outline */
    padding: 1em;
    border: 1px solid #ccc;
    border-radius: 1em;
  }
  
  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }
  
  form li + li {
    margin-top: 1em;
  }
  
  label {
    /* Uniform size & alignment */
    display: inline-block;
    width: 90px;
    text-align: right;
  }
  
  input,
  textarea {
    /* To make sure that all text fields have the same font settings
       By default, textareas have a monospace font */
    font: 1em sans-serif;
  
    /* Uniform text field size */
    width: 300px;
    box-sizing: border-box;
  
    /* Match form field borders */
    border: 1px solid #999;
  }
  
  input:focus,
  textarea:focus {
    /* Additional highlight for focused elements */
    border-color: #1A775F;
  }
  
  textarea {
    /* Align multiline text fields with their labels */
    vertical-align: top;
  
    /* Provide space to type some text */
    height: 5em;
  }
  
  .button {
    /* Align buttons with the text fields */
    padding-left: 90px; /* same size as the label elements */
    margin: 50px auto;
    font-size: 50px;
  }
  
  .button {
    /* This extra margin represent roughly the same space as the space
       between the labels and their text fields */
    margin-left: 0.5em;
  }

@media screen and (max-width: 900px) {
    #hero, .home-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    .home-title {
        font-size: 25px;
        color: #6f7364;
    }
    .rivers-card, .camping-card, .rapids-card { 
        margin: 50px auto;
        width: 60%;
    }
    #background {
        display: none;
    }
    .mountains, .msg {
        width: 80%;
        display: block;
        margin: 0 auto;
    }
    footer {
        margin-top: 25px;
    }
}

